[package]
authors = ["Sam Crow <samcrow@uw.edu>"]
name = "xplm"
version = "0.4.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/rust-xplm"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"
edition = "2021"

[dependencies]
xplm-sys = "0.5.0"
thiserror = "1.0.58"

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
strip = "symbols"

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]
